--- a/international-date-line.html
+++ b/international-date-line.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QCX3G9KSPC"></script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYFLKB3JF4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-QCX3G9KSPC');
+  gtag('config', 'G-QYFLKB3JF4');
 </script>
     <meta charset="UTF-ag">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
