--- a/international-date-line.html
+++ b/international-date-line.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-ag">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The International Date Line: Where Tomorrow Begins - MyGlobalTime Blog</title>
+    <meta name="description" content="Journey to the imaginary line where tomorrow begins. Discover what the International Date Line is, why you lose or gain a day when you cross it, and the reason it zigs and zags.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
