--- a/blogs.html
+++ b/blogs.html
@@ -12,7 +12,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyGlobalTime - Blog</title>
+    <title>Blog: Stories & Insights About Time Zones & More | MyGlobalTime</title>
+    <meta name="description" content="Explore fascinating articles about the history of timekeeping. Your go-to blog for understanding the world of time.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
