--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyGlobalTime - Real-Time World Clocks</title>
+    <title>Real-Time World Clock | MyGlobalTime</title>
+    <meta name="description" content="Check the current local time and view real-time world clocks for major cities. Easily add any city to compare time zones. Your simple window to global time.">
+    
     <link rel="icon" href="/favicon.jpg" type="image/jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
