--- a/what-is-utc.html
+++ b/what-is-utc.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is UTC? A Simple Guide to the World's Time Standard - MyGlobalTime Blog</title>
+    <meta name="description" content="Ever wondered what UTC means? Our simple guide demystifies Coordinated Universal Time, the world's master clock. Learn why it's a standard, not a time zone, and how to use UTC offsets.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -137,10 +138,6 @@
             </div>
         </article>
     </main>
-
-    <footer class="text-center text-gray-500 py-8 mt-16 border-t border-gray-800">
-        <p>&copy; 2025 MyGlobalTime. All Rights Reserved.</p>
-    </footer>
 
 </body>
 </html>
