--- a/what-is-est.html
+++ b/what-is-est.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYFLKB3JF4"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYFLKB3JF4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -13,6 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is EST? - MyGlobalTime</title>
+    <meta name="description" content="What is Eastern Standard Time (EST)? Learn all about the EST time zone, its UTC-5 offset, its switch to EDT (Daylight Saving), and which major cities like New York use it.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,7 +104,21 @@
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="https://www.myglobaltime.com/" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a>
                 <a href="https://www.myglobaltime.com/timeconverter" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Time Converter</a>
-                <a href="#" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium border-t border-gray-700 mt-2 pt-3">Blog</a>
+                
+                <h3 class="px-3 pt-2 text-xs font-semibold text-gray-400 uppercase tracking-wider">Time Zones</h3>
+                <a href="https://www.myglobaltime.com/what-is-ist" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">IST</a>
+                <a href="https://www.myglobaltime.com/what-is-est" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">EST</a>
+                <a href="https://www.myglobaltime.com/what-is-pst" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">PST</a>
+
+                <h3 class="px-3 pt-4 text-xs font-semibold text-gray-400 uppercase tracking-wider">Countries</h3>
+                <a href="https://www.myglobaltime.com/australia" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Australia</a>
+                <a href="https://www.myglobaltime.com/canada" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Canada</a>
+                <a href="https://www.myglobaltime.com/france" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">France</a>
+                <a href="https://www.myglobaltime.com/russia" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Russia</a>
+                <a href="https://www.myglobaltime.com/uk" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">UK</a>
+                <a href="https://www.myglobaltime.com/usa" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">USA</a>
+
+                <a href="https://www.myglobaltime.com/blogs" target="_top" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium border-t border-gray-700 mt-2 pt-3">Blog</a>
             </div>
         </div>
     </nav>
@@ -155,7 +169,6 @@
 
             </div>
 
-            <!-- Blog Section Added Here -->
             <section class="py-16 bg-gray-800/20 rounded-lg">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <h2 class="text-3xl font-bold text-center mb-12">From Our Blog</h2>
