--- a/australia.html
+++ b/australia.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time in Australia - MyGlobalTime</title>
     <meta name="description" content="What time is it in Australia? 🇦🇺 Get the exact current local time for all of Australia's 9 time zones. Check the time in Sydney, Melbourne, Perth, Brisbane, and more instantly.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
