--- a/blogs.html
+++ b/blogs.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog: Stories & Insights About Time Zones & More | MyGlobalTime</title>
     <meta name="description" content="Explore fascinating articles about time zones, Daylight Saving, UTC, and the history of timekeeping. Your go-to blog for understanding the world of time.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
