--- a/daylight-saving-time-explained.html
+++ b/daylight-saving-time-explained.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daylight Saving Time Explained: Why We Move Our Clocks - MyGlobalTime Blog</title>
     <meta name="description" content="Ever wondered why we 'spring forward' and 'fall back'? Uncover the surprising history of Daylight Saving Time, from saving energy in WWI to the modern debate on health and safety.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
