--- a/france.html
+++ b/france.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time in France - MyGlobalTime</title>
     <meta name="description" content="What time is it in France? 🇫🇷 Get the current local time for Paris and all of France's 12 time zones, including overseas territories from the Caribbean to the Pacific.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
