--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Real-Time World Clock | MyGlobalTime</title>
     <meta name="description" content="Check the current local time and view real-time world clocks for major cities. Easily add any city to compare time zones. Your simple window to global time.">
     
-    <link rel="icon" href="/favicon.jpg" type="image/jpg">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
