--- a/india-single-time-zone.html
+++ b/india-single-time-zone.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why India Has a Single Time Zone (And the Debate for More) - MyGlobalTime Blog</title>
     <meta name="description" content="India spans nearly 3,000 km but uses just one time zone. Learn the historical reasons for IST and explore the debate for a second time zone to save energy in the northeast.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
