--- a/russia.html
+++ b/russia.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time in Russia - MyGlobalTime</title>
     <meta name="description" content="What is the time in Russia? 🇷🇺 Get the exact current local time for all 11 of Russia's time zones. Instantly check the time in Moscow, Vladivostok, and across the country.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
