--- a/timeconverter.html
+++ b/timeconverter.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Zone Converter - MyGlobalTime</title>
     <meta name="description" content="Easily convert time between different cities and time zones. Our simple tool helps you find the exact time difference for scheduling international calls, meetings, and events.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
