--- a/usa.html
+++ b/usa.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time in the USA - MyGlobalTime</title>
     <meta name="description" content="What time is it in the USA? 🇺🇸 Get the exact current local time for all 6 US time zones. Instantly check the time in New York, Chicago, Los Angeles, and more.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
