--- a/what-is-est.html
+++ b/what-is-est.html
@@ -13,6 +13,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>What is EST? - MyGlobalTime</title>
      <meta name="description" content="What is Eastern Standard Time (EST)? Learn all about the EST time zone, its UTC-5 offset, its switch to EDT (Daylight Saving), and which major cities like New York use it.">
+     <link rel="icon" href="/favicon.png" type="image/png">
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
      <link rel="preconnect" href="https://fonts.googleapis.com">
