--- a/canada.html
+++ b/canada.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>Current Time in Canada - MyGlobalTime</title>
     <meta name="description" content="What time is it in Canada? 🇨🇦 Get the exact current local time for all of Canada's 6 time zones. Instantly check the time in Toronto, Vancouver, Halifax, and more.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
