--- a/uk.html
+++ b/uk.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time in the UK - MyGlobalTime</title>
     <meta name="description" content="What time is it in the UK? 🇬🇧 Get the exact current local time for London (GMT/BST) and all 9 of the UK's time zones, including its overseas territories.">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
