--- a/what-is-ist.html
+++ b/what-is-ist.html
@@ -13,6 +13,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>What is IST? - MyGlobalTime</title>
      <meta name="description" content="What is India Standard Time (IST)? Get a clear explanation of the IST time zone, its unique UTC+5:30 offset, and see the current time in major cities like Mumbai and New Delhi.">
+     <link rel="icon" href="/favicon.png" type="image/png">
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
      <link rel="preconnect" href="https://fonts.googleapis.com">
