--- a/what-is-pst.html
+++ b/what-is-pst.html
@@ -13,6 +13,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>What is PST? - MyGlobalTime</title>
      <meta name="description" content="What is Pacific Standard Time (PST)? Get a clear explanation of the PST time zone, its UTC-8 offset, its switch to PDT (Daylight Saving), and which major cities like Los Angeles use it.">
+     <link rel="icon" href="/favicon.png" type="image/png">
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
      <link rel="preconnect" href="https://fonts.googleapis.com">
