redirect issue fixed

--- a/blogs/what-is-utc.html
+++ b/blogs/what-is-utc.html
@@ -164,6 +164,6 @@
         setupBlogScrolling();
     });
 </script>
-<script src="main.js" defer></script>
+<script src="/main.js" defer></script>
 </body>
 </html>
