--- a/blogs/daylight-saving-time-explained.html
+++ b/blogs/daylight-saving-time-explained.html
@@ -165,6 +165,6 @@
         setupBlogScrolling();
     });
 </script>
-<script src="main.js" defer></script>
+<script src="/main.js" defer></script>
 </body>
 </html>
