--- a/blogs/international-date-line.html
+++ b/blogs/international-date-line.html
@@ -153,6 +153,6 @@
         setupBlogScrolling();
     });
 </script>
-<script src="main.js" defer></script>
+<script src="/main.js" defer></script>
 </body>
 </html>
