--- a/what-is-est.html
+++ b/what-is-est.html
@@ -105,8 +105,8 @@
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
                         <p class="text-gray-300 leading-relaxed">Most places in the Eastern Time Zone in North America observe Daylight Saving Time (DST) to make better use of daylight during the summer.</p>
                         <ul class="mt-4 space-y-2 list-disc list-inside text-indigo-200">
-                            <li><strong>Starts:</strong> DST begins on the **second Sunday in March**. Clocks are moved forward one hour from 2:00 AM to 3:00 AM. The time zone becomes EDT (UTC-4).</li>
-                            <li><strong>Ends:</strong> DST ends on the **first Sunday in November**. Clocks are moved back one hour from 2:00 AM to 1:00 AM. The time zone reverts to EST (UTC-8).</li>
+                            <li><strong>Starts:</strong> DST begins on the 'second Sunday in March'. Clocks are moved forward one hour from 2:00 AM to 3:00 AM. The time zone becomes EDT (UTC-4).</li>
+                            <li><strong>Ends:</strong> DST ends on the 'first Sunday in November'. Clocks are moved back one hour from 2:00 AM to 1:00 AM. The time zone reverts to EST (UTC-8).</li>
                         </ul>
                         <p class="mt-4 text-sm text-gray-400">A helpful mnemonic is "spring forward, fall back."</p>
                     </div>
@@ -117,10 +117,10 @@
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
                         <p class="text-gray-300 leading-relaxed">The correct abbreviation depends on the time of year. Using the wrong one is a frequent mistake.</p>
                         <ul class="mt-4 space-y-2">
-                            <li><strong class="text-white">EST (Eastern Standard Time):</strong> This is the "winter" time, in effect from early November to mid-March. It is **UTC-5**.</li>
-                            <li><strong class="text-white">EDT (Eastern Daylight Time):</strong> This is the "summer" time, active during Daylight Saving from mid-March to early November. It is **UTC-4**.</li>
+                            <li><strong class="text-white">EST (Eastern Standard Time):</strong> This is the "winter" time, in effect from early November to mid-March. It is 'UTC-5'.</li>
+                            <li><strong class="text-white">EDT (Eastern Daylight Time):</strong> This is the "summer" time, active during Daylight Saving from mid-March to early November. It is 'UTC-4'.</li>
                         </ul>
-                        <p class="mt-4 text-gray-300">If you want to refer to the time in this zone without worrying about the season, the general term **ET (Eastern Time)** is always correct.</p>
+                        <p class="mt-4 text-gray-300">If you want to refer to the time in this zone without worrying about the season, the general term 'ET (Eastern Time)'' is always correct.</p>
                     </div>
                 </section>
                 
@@ -150,7 +150,7 @@
                 <section>
                     <h2 class="text-3xl font-bold text-center mb-6 font-headline bg-clip-text text-transparent bg-gradient-to-r from-indigo-300 to-purple-400">Global Importance</h2>
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
-                        <p class="text-gray-300 leading-relaxed">The Eastern Time Zone is arguably the most significant time zone for global business and politics. It is home to **Wall Street** in New York City, the world's financial center, and **Washington, D.C.**, the capital of the United States. The operating hours of the New York Stock Exchange (NYSE) and major government activities set the rhythm for markets and news cycles around the world, making ET a de facto standard reference time in many international contexts.</p>
+                        <p class="text-gray-300 leading-relaxed">The Eastern Time Zone is arguably the most significant time zone for global business and politics. It is home to 'Wall Street' in New York City, the world's financial center, and 'Washington, D.C.', the capital of the United States. The operating hours of the New York Stock Exchange (NYSE) and major government activities set the rhythm for markets and news cycles around the world, making ET a de facto standard reference time in many international contexts.</p>
                     </div>
                 </section>
             </div>
