--- a/what-is-ist.html
+++ b/what-is-ist.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is IST? - MyGlobalTime</title>
-    <meta name="description" content="What is India Standard Time (IST)? Get a clear explanation of the IST time zone, its unique UTC+5:30 offset, and see the current time in major cities like Mumbai and New Delhi.">
+    <meta name="description" content="What is Indian Standard Time (IST)? Get a clear explanation of the IST time zone, its unique UTC+5:30 offset, and see the current time in major cities like Mumbai and New Delhi.">
     <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -57,7 +57,7 @@
             <h1 class="text-4xl md:text-6xl font-black tracking-tight bg-clip-text text-transparent bg-gradient-to-r from-indigo-400 to-purple-500">
                 What is IST?
             </h1>
-            <p class="mt-2 text-lg text-gray-400">A Complete Guide to India Standard Time.</p>
+            <p class="mt-2 text-lg text-gray-400">A Complete Guide to Indian Standard Time.</p>
         </header>
 
         <main>
@@ -72,7 +72,7 @@
                 <div class="space-y-4">
                     <div>
                         <h2 class="font-bold text-xl">Full Name</h2>
-                        <p class="text-gray-300">India Standard Time</p>
+                        <p class="text-gray-300">Indian Standard Time</p>
                     </div>
                     <div>
                         <h2 class="font-bold text-xl">UTC Offset</h2>
@@ -88,7 +88,7 @@
                     </div>
                     <div>
                         <h2 class="font-bold text-xl">About</h2>
-                        <p class="text-gray-300 leading-relaxed">India Standard Time is the time zone observed throughout India and Sri Lanka. It has a unique offset of five and a half hours ahead of Coordinated Universal Time (UTC). Neither country observes daylight saving time.</p>
+                        <p class="text-gray-300 leading-relaxed">Indian Standard Time is the time zone observed throughout India and Sri Lanka. It has a unique offset of five and a half hours ahead of Coordinated Universal Time (UTC). Neither country observes daylight saving time.</p>
                     </div>
                 </div>
 
@@ -99,14 +99,14 @@
                 <section>
                     <h2 class="text-3xl font-bold text-center mb-6 font-headline bg-clip-text text-transparent bg-gradient-to-r from-indigo-300 to-purple-400">The Unique UTC+5:30 Offset</h2>
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
-                        <p class="text-gray-300 leading-relaxed">Unlike most time zones that have full-hour offsets from UTC, IST is offset by 5 hours and 30 minutes. This is because IST is calculated based on the longitude $82.5^\circ$ E, which passes just west of the city of Mirzapur in Uttar Pradesh. This longitude was chosen as the central meridian for the country, and its time corresponds to a half-hour offset, providing a compromise time for the entire nation.</p>
+                        <p class="text-gray-300 leading-relaxed">Unlike most time zones that have full-hour offsets from UTC, IST is offset by 5 hours and 30 minutes. This is because IST is calculated based on the longitude 82.5° East (82°30′ E), which passes just west of the city of Mirzapur in Uttar Pradesh. This longitude was chosen as the central meridian for the country, and its time corresponds to a half-hour offset, providing a compromise time for the entire nation.</p>
                     </div>
                 </section>
 
                 <section>
                     <h2 class="text-3xl font-bold text-center mb-6 font-headline bg-clip-text text-transparent bg-gradient-to-r from-indigo-300 to-purple-400">A Brief History of IST</h2>
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
-                        <p class="text-gray-300 leading-relaxed">Before independence, British India officially ran on multiple time zones (Bombay Time and Calcutta Time). To unify the country's timekeeping, India Standard Time was introduced in 1906. However, it was not strictly enforced until **September 1, 1947**, after India gained independence. The National Physical Laboratory (NPL) in New Delhi is the official timekeeper for the nation, responsible for maintaining the accuracy of IST.</p>
+                        <p class="text-gray-300 leading-relaxed">Before independence, British India officially ran on multiple time zones (Bombay Time and Calcutta Time). To unify the country's timekeeping, Indian Standard Time was introduced in 1906. However, it was not strictly enforced until 'September 1, 1947', after India gained independence. The National Physical Laboratory (NPL) in New Delhi is the official timekeeper for the nation, responsible for maintaining the accuracy of IST.</p>
                     </div>
                 </section>
                 
