--- a/what-is-pst.html
+++ b/what-is-pst.html
@@ -105,8 +105,8 @@
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
                         <p class="text-gray-300 leading-relaxed">The switch between PST and PDT is a key feature of the Pacific Time Zone. This practice, known as Daylight Saving Time (DST), aims to make better use of natural daylight.</p>
                         <ul class="mt-4 space-y-2 list-disc list-inside text-indigo-200">
-                            <li><strong>Starts:</strong> Daylight Saving Time begins on the **second Sunday in March**. Clocks are moved forward one hour from 2:00 AM to 3:00 AM. The time zone becomes PDT (UTC-7).</li>
-                            <li><strong>Ends:</strong> Daylight Saving Time ends on the **first Sunday in November**. Clocks are moved back one hour from 2:00 AM to 1:00 AM. The time zone reverts to PST (UTC-8).</li>
+                            <li><strong>Starts:</strong> Daylight Saving Time begins on the 'second Sunday in March'. Clocks are moved forward one hour from 2:00 AM to 3:00 AM. The time zone becomes PDT (UTC-7).</li>
+                            <li><strong>Ends:</strong> Daylight Saving Time ends on the 'first Sunday in November'. Clocks are moved back one hour from 2:00 AM to 1:00 AM. The time zone reverts to PST (UTC-8).</li>
                         </ul>
                         <p class="mt-4 text-sm text-gray-400">A helpful mnemonic is "spring forward, fall back."</p>
                     </div>
@@ -117,10 +117,10 @@
                     <div class="bg-gray-800/40 p-6 rounded-lg border border-gray-700">
                         <p class="text-gray-300 leading-relaxed">It's a common point of confusion, but the distinction is simple and depends on the time of year:</p>
                         <ul class="mt-4 space-y-2">
-                            <li><strong class="text-white">PST (Pacific Standard Time):</strong> This is the "winter" time, which is in effect from early November to mid-March. It is **UTC-8**.</li>
-                            <li><strong class="text-white">PDT (Pacific Daylight Time):</strong> This is the "summer" time, active during Daylight Saving Time from mid-March to early November. It is **UTC-7**.</li>
+                            <li><strong class="text-white">PST (Pacific Standard Time):</strong> This is the "winter" time, which is in effect from early November to mid-March. It is 'UTC-8'.</li>
+                            <li><strong class="text-white">PDT (Pacific Daylight Time):</strong> This is the "summer" time, active during Daylight Saving Time from mid-March to early November. It is 'UTC-7'.</li>
                         </ul>
-                        <p class="mt-4 text-gray-300">If you're unsure which is in effect, you can use the more general term **PT (Pacific Time)**, which correctly refers to the time in the region regardless of the season.</p>
+                        <p class="mt-4 text-gray-300">If you're unsure which is in effect, you can use the more general term 'PT (Pacific Time)', which correctly refers to the time in the region regardless of the season.</p>
                     </div>
                 </section>
                 
