--- a/blogs/daylight-saving-time-explained.html
+++ b/blogs/daylight-saving-time-explained.html
@@ -119,12 +119,13 @@
 
 <script>
     // --- BLOG DATA & FUNCTIONS ---
-    const blogPosts = [
+        const blogPosts = [
+        { title: "From the Red Heart to the Turquoise Sea", description: "Hike epic canyons, swim with wild sea lions, and discover an Australia beyond the guidebooks.", image: "/images/ayers-rock.png", link: "https://www.myglobaltime.com/blogs/australia-red-centre-to-coast" },
+        { title: "Cuddles and Chaos Down Under", description: "From cube-pooping wombats to deadly snakes, explore the wild and wonderful paradox of Australian animals.", image: "/images/kangaroo.png", link: "https://www.myglobaltime.com/blogs/australian-animals-cuddles-and-chaos" },
         { title: "More Than a Reef: Unveiling the Secrets of the Great Barrier Reef", description: "Uncover the secrets of the world's largest reef and the fascinating lives of its marine inhabitants.", image: "/images/coral.png", link: "https://www.myglobaltime.com/blogs/secrets-of-the-reefs" },
         { title: "Daylight Saving Time Explained", description: "Explore the surprising history and heated debates behind the twice-yearly ritual of changing our clocks.", image: "https://static.wixstatic.com/media/31d31f_ec75f5b0dbfa408bb86f301a96cac4dc~mv2.png", link: "https://www.myglobaltime.com/blogs/daylight-saving-time-explained" },
         { title: "What is UTC? A Simple Guide", description: "Demystify the master clock that keeps the entire planet in sync, from aviation to the internet.", image: "https://static.wixstatic.com/media/31d31f_7c17d25ef1914f058b2bc407cb525b46~mv2.png", link: "https://www.myglobaltime.com/blogs/what-is-utc" },
-        { title: "The International Date Line", description: "Journey to the middle of the Pacific to understand the imaginary line where a new day is born.", image: "https://static.wixstatic.com/media/31d31f_a7a0cf78f82b4693a4af4003457256f6~mv2.png", link: "https://www.myglobaltime.com/blogs/international-date-line" },
-        { title: "Why India Has a Single Time Zone", description: "A look into the history and consequences of India's single time zone and the calls for change.", image: "https://static.wixstatic.com/media/31d31f_030e268abdb4428a8ee4f2f62363c90a~mv2.png", link: "https://www.myglobaltime.com/blogs/india-single-time-zone" }
+        { title: "The International Date Line", description: "Journey to the middle of the Pacific to understand the imaginary line where a new day is born.", image: "https://static.wixstatic.com/media/31d31f_a7a0cf78f82b4693a4af4003457256f6~mv2.png", link: "https://www.myglobaltime.com/blogs/international-date-line" }
     ];
 
     function populateBlogSection() {
