--- a/blogs/daylight-saving-time-explained.html
+++ b/blogs/daylight-saving-time-explained.html
@@ -120,7 +120,7 @@
 <script>
     // --- BLOG DATA & FUNCTIONS ---
         const blogPosts = [
-        { title: "From the Red Heart to the Turquoise Sea", description: "Hike epic canyons, swim with wild sea lions, and discover an Australia beyond the guidebooks.", image: "/images/ayers-rock.png", link: "https://www.myglobaltime.com/blogs/red-heart-to-turquoise-sea" },
+        { title: "From the Red Heart to the Turquoise Sea", description: "Hike epic canyons, swim with wild sea lions, and discover an Australia beyond the guidebooks.", image: "/images/sea-turtle.png", link: "https://www.myglobaltime.com/blogs/red-heart-to-turquoise-sea" },
         { title: "Cuddles and Chaos Down Under", description: "From cube-pooping wombats to deadly snakes, explore the wild and wonderful paradox of Australian animals.", image: "/images/kangaroo.png", link: "https://www.myglobaltime.com/blogs/cuddles-and-chaos-down-under" },
         { title: "More Than a Reef: Unveiling the Secrets of the Great Barrier Reef", description: "Uncover the secrets of the world's largest reef and the fascinating lives of its marine inhabitants.", image: "/images/coral.png", link: "https://www.myglobaltime.com/blogs/secrets-of-the-reefs" },
         { title: "Daylight Saving Time Explained", description: "Explore the surprising history and heated debates behind the twice-yearly ritual of changing our clocks.", image: "https://static.wixstatic.com/media/31d31f_ec75f5b0dbfa408bb86f301a96cac4dc~mv2.png", link: "https://www.myglobaltime.com/blogs/daylight-saving-time-explained" },
