--- a/timeconverter.html
+++ b/timeconverter.html
@@ -406,6 +406,8 @@
 
         // --- BLOG FUNCTIONS ---
         const blogPosts = [
+        { title: "Time in a Trickle, a Flame, and a Whisper", description: "Discover how ancient cultures used water, sand, and fire to master the art of timekeeping.", image: "/images/sand-timer.png", link: "https://www.myglobaltime.com/blogs/time-in-a-trickle" },
+        { title: "The Sun: Our First Clock", description: "From Shadow to Clock: How We First Learned to Tell Time", image: "/images/sundial.png", link: "https://www.myglobaltime.com/blogs/the-first-clock" },
         { title: "From the Red Heart to the Turquoise Sea", description: "Hike epic canyons, swim with wild sea lions, and discover an Australia beyond the guidebooks.", image: "/images/sea-turtle.png", link: "https://www.myglobaltime.com/blogs/red-heart-to-turquoise-sea" },
         { title: "Cuddles and Chaos Down Under", description: "From cube-pooping wombats to deadly snakes, explore the wild and wonderful paradox of Australian animals.", image: "/images/kangaroo.png", link: "https://www.myglobaltime.com/blogs/cuddles-and-chaos-down-under" },
         { title: "More Than a Reef: Unveiling the Secrets of the Great Barrier Reef", description: "Uncover the secrets of the world's largest reef and the fascinating lives of its marine inhabitants.", image: "/images/coral.png", link: "https://www.myglobaltime.com/blogs/secrets-of-the-reefs" },
