--- a/what-is-est.html
+++ b/what-is-est.html
@@ -187,7 +187,9 @@
         { title: "More Than a Reef: Unveiling the Secrets of the Great Barrier Reef", description: "Uncover the secrets of the world's largest reef and the fascinating lives of its marine inhabitants.", image: "/images/coral.png", link: "https://www.myglobaltime.com/blogs/secrets-of-the-reefs" },
         { title: "Daylight Saving Time Explained", description: "Explore the surprising history and heated debates behind the twice-yearly ritual of changing our clocks.", image: "https://static.wixstatic.com/media/31d31f_ec75f5b0dbfa408bb86f301a96cac4dc~mv2.png", link: "https://www.myglobaltime.com/blogs/daylight-saving-time-explained" },
         { title: "What is UTC? A Simple Guide", description: "Demystify the master clock that keeps the entire planet in sync, from aviation to the internet.", image: "https://static.wixstatic.com/media/31d31f_7c17d25ef1914f058b2bc407cb525b46~mv2.png", link: "https://www.myglobaltime.com/blogs/what-is-utc" },
-        { title: "The International Date Line", description: "Journey to the middle of the Pacific to understand the imaginary line where a new day is born.", image: "https://static.wixstatic.com/media/31d31f_a7a0cf78f82b4693a4af4003457256f6~mv2.png", link: "https://www.myglobaltime.com/blogs/international-date-line" }
+        { title: "The International Date Line", description: "Journey to the middle of the Pacific to understand the imaginary line where a new day is born.", image: "https://static.wixstatic.com/media/31d31f_a7a0cf78f82b4693a4af4003457256f6~mv2.png", link: "https://www.myglobaltime.com/blogs/international-date-line" },
+        { title: "Why India has a Single Time Zone?", description: "This blog post explores why India has a single time zone, the practical problems this causes in the eastern states, and the ongoing debate about creating a second one.", image: "/images/india.png", link: "https://www.myglobaltime.com/blogs/india-single-time-zone" }
+    
     ];
         // --- ELEMENTS ---
         const currentTimeDisplay = document.getElementById('current-time-est');
